--- a/build.gradle
+++ b/build.gradle
@@ -10,13 +10,14 @@ buildscript {
         androidx_test_version = "1.3.0"
         paging_version = "2.1.2"
         glide_version = "4.11.0"
+        navigation_version = "2.3.0"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.1"
+        classpath 'com.android.tools.build:gradle:4.0.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
