Presentation module ongoing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,18 @@
             android:name=".activities.ComicActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:name=".activities.CreatorActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.EventActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.SeriesActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.StoryActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".activities.TabsActivity"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar">
