--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,11 @@ buildscript {
         paging_version = "2.1.2"
         glide_version = "4.11.0"
         navigation_version = "2.3.0"
+        junit_version = "4.13"
+        appcompat_version = "1.2.0"
+        androidx_core_version = "1.3.2"
+        androidx_junit_version = "1.1.2"
+        espresso_version = "3.3.0"
     }
     repositories {
         google()
