--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = "1.4.31"
+        kotlin_version = "1.7.10"
         rxjava_version = "3.0.4"
         retrofit_version = "2.9.0"
-        koin_version = "2.1.6"
+        koin_version = "3.2.0"
         okhttp3_version = "4.9.0"
         espresso_version = "3.3.0"
-        androidx_test_version = "1.3.0"
-        paging_version = "2.1.2"
+        androidx_test_version = "1.4.0"
+        paging_version = "3.1.1"
         glide_version = "4.11.0"
-        navigation_version = "2.3.3"
-        junit_version = "4.13.1"
-        appcompat_version = "1.2.0"
-        androidx_core_version = "1.3.2"
-        androidx_junit_version = "1.1.2"
-        espresso_version = "3.3.0"
+        navigation_version = "2.5.0"
+        junit_version = "4.13.2"
+        appcompat_version = "1.4.2"
+        androidx_core_version = "1.8.0"
+        androidx_junit_version = "1.1.3"
+        espresso_version = "3.4.0"
     }
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.android.tools.build:gradle:7.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -33,7 +33,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
